--- a/todo-list/src/styles/components/_panel.scss
+++ b/todo-list/src/styles/components/_panel.scss
@@ -4,7 +4,7 @@
   margin-bottom: 10px;
   padding: 15px 10px;
   display: grid;
-  grid-template-columns: 1fr 7fr 2fr 2fr;
+  grid-template-columns: 8fr 2fr 2fr;
   grid-gap: 10px;
   align-items: center;
   > input[type="checkbox"] {
